--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "babel": "^4.6.3",
     "browserify": "^9.0.3",
     "chai": "^2.3.0",
-    "rijs.core": "git://github.com/rijs/core",
+    "rijs.core": "*",
     "coveralls": "^2.11.2",
     "istanbul": "^0.3.13",
     "mocha": "^2.2.4",
@@ -25,6 +25,6 @@
     "uglify-js": "^2.4.16"
   },
   "dependencies": {
-    "utilise": "git://github.com/utilise/utilise"
+    "utilise": "*"
   }
 }
