--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "chai": "*",
     "coveralls": "*",
     "istanbul": "*",
-    "mocha": "^5.0.5",
+    "mocha": "^5.1.0",
     "mocha-lcov-reporter": "*",
     "popper": "*",
-    "rijs.core": "^1.2.2",
-    "rollup": "*",
+    "rijs.core": "^1.2.3",
+    "rollup": "^0.58.0",
     "rollup-plugin-buble": "^0.16.0",
     "rollup-plugin-commonjs": "^8.2.1",
     "rollup-plugin-node-resolve": "^3.0.0",
@@ -37,6 +37,6 @@
   },
   "dependencies": {
     "browser-resolve": "^1.11.2",
-    "utilise": "^2.3.1"
+    "utilise": "^2.3.3"
   }
 }
